# nextbus

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  default_config.py  definitions.py  docker-compose.populate.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  manage.py  manifest.in  nb.py  populate.sh  pyproject.toml  setup.py  start.sh  tapi_new.json  tapi_raw.json  wsgi.py
docker/nginx/: Dockerfile
docker/postgres/: Dockerfile
docs/: maps-api.md  todo.md
migrations/: env.py
migrations/versions/: 03686cae6fcb_added_gin_indices.py  (+45 more)
nextbus/: __init__.py  __main__.py  _logging.py  commands.py  converters.py  file_ops.py  forms.py  graph.py  local_authorities.json  local_authority_list.json  location.py  logger.py  materialized_views.py  models.py  os_grid.py  parser.py  pop.py  populate.py  resources.py  search.py  tapi.py  timetable.py  views.py
nginx/: Dockerfile  nginx.conf
samples/: search.py  search.sql
tests/: NPTG_SW.xml  NPTG_all.xml  NPTG_raw.xml  NPTG_tram.xml  NaPTAN_all.xml  NaPTAN_example.xml  NaPTAN_raw.xml  NaPTAN_raw_370.xml  NaPTAN_raw_940.xml  NaPTAN_tram.xml  TNDS_output.xml  TNDS_raw.xml  conftest.py  data.py  tapi_processed.json  test_database.py  test_db.py  test_graph.py  test_live_data.py  test_location.py  test_models.py  test_parser.py  test_pop_modify.py  test_pop_naptan.py  test_pop_tnds.py  test_populate.py  test_populate_ext.py  test_populate_tnds.py  test_resources.py  test_search.py  test_timetable.py  test_view.py  test_views.py  utils.py
(+119 files in other folders)
