[tool.poetry]
name = "nextbus"
version = "0.9.8"
description = "Live bus times for Great Britain"
authors = ["macph <macph@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
flask-migrate = "^2.5"
flask-sqlalchemy = "^2.4"
flask-wtf = "^0.14.2"
click = "^7.0"
lxml = "^4.4"
psycopg2-binary = "^2.8"
pyparsing = "^2.4"
python-dateutil = "^2.8"
requests = "^2.22"
gunicorn = "^20.0"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
