[tool.poetry]
name = "nextbus"
version = "0.9.10"
description = "Live bus times for Great Britain"
authors = ["macph <macph@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
flask = "^2.0"
flask-migrate = "^3.1"
flask-sqlalchemy = "^2.4"
flask-wtf = "^0.15"
click = "^8.0"
lxml = "^4.4"
psycopg2-binary = "^2.8"
pyparsing = "^2.4"
python-dateutil = "^2.8"
requests = "^2.22"
gunicorn = "^20.0"
python-dotenv = "^0.19"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
